--- a/package.json
+++ b/package.json
@@ -13,15 +13,35 @@
     "@fontsource/inter": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-table": "^8.21.2",
+    "@types/js-cookie": "^3.0.6",
     "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.483.0",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
-    "yup": "^1.6.1"
+    "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "yup": "^1.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
