--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "security-audit": "npm audit && snyk test",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
@@ -23,10 +32,13 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-table": "^8.21.2",
     "@types/js-cookie": "^3.0.6",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.6",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "edge-csrf": "^1.0.11",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.483.0",
@@ -48,8 +60,22 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "autoprefixer": "^10.4.17",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-security": "latest",
+    "eslint-plugin-sonarjs": "latest",
+    "husky": "latest",
+    "jest": "latest",
+    "lint-staged": "latest",
     "postcss": "^8.4.35",
+    "prettier": "latest",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
@@ -60,5 +86,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
+  }
 }
