--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,9 @@ next-env.d.ts
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
-!.vscode/launch.json 
+!.vscode/launch.json
+
+# github
+.github/
+.github/workflows/ 
+
