--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
